graal crashes with Zombie.java test

XMLWordPrintable

    • b28

        The comments from JDK-8235273 point to a test added with JDK-8212160 that crashes with graal because of code added with JDK-8173361.

        The graal crash is because compiled_method_load events are added to the ServiceThread's deferred event queue before the ServiceThread is created so are not walked to keep them from being zombied.

        https://bugs.openjdk.java.net/browse/JDK-8235273?focusedCommentId=14305951&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-14305951

        https://bugs.openjdk.java.net/browse/JDK-8235273?focusedCommentId=14305983&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-14305983

              Assignee:
              Coleen Phillimore
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: